# simple-secrets

./: .gitignore  README.md  install.sh  pyproject.toml  simple_secret.py  test.py
