[tool.poetry]
name = "simple-secret"
version = "0.1.0"
description = ""
authors = ["Erik Lilja <erikvlilja@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.5"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
pytest-mock = "^3.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
